Changed chemical definition to reflect additions to Inorganic Nomenculature page <-ic#508320>

--- a/wiki/-ic.wikitext
+++ b/wiki/-ic.wikitext
@@ -1,9 +1,6 @@
 {{Table_Suffixes}}
 
-'''-ic''' is an [[suffix]] used in [[science]] to refer to [[chemical compound]]s having a [[valence]] higher than that of a specified [[element]] in compounds or [[ion]]s named with [[adjective]]s ending in [[-ous]].
-
-
-{{stub}}
+'''-ic''' is an [[suffix]] used in [[chemistry]] to name [[compound|chemical compound]]s in which a specified [[element]] has a higher [[oxidation number]] than in the equivalent compound whose name ends in the suffix [[-ous]]. See [[Inorganic nomenclature]].
 
 
 ----
