Emboldened Croation definition head. <-ic#508320>

--- a/wiki/-ic.wikitext
+++ b/wiki/-ic.wikitext
@@ -5,7 +5,7 @@
 
 ----
 
--ic (-i&#263;, including [[diacritic]]), pronounced "itch" in [[Croatian language|Croatian]]/[[Bosnian language|Bosnian]]/[[Serbian language|Serbian]], means "son of" or "by" in [[surname]]s, for example [[Milosevic]].
+'''-ic''' (-i&#263;, including [[diacritic]]), pronounced "itch" in [[Croatian language|Croatian]]/[[Bosnian language|Bosnian]]/[[Serbian language|Serbian]], means "son of" or "by" in [[surname]]s, for example [[Milosevic]].
 
 
 [[Category:Chemistry]]
