--- a/wiki/anna.wikitext
+++ b/wiki/anna.wikitext
@@ -5,7 +5,7 @@
 #A female [[given name]].
 
 ====Translations====
-*Italian: Anna
+*Italian: Anna korka
 *Slovene: [[Ana]], [[Anica]], [[Anka]], [[Ani]]
 
 ----
