--- a/wiki/clast.wikitext
+++ b/wiki/clast.wikitext
@@ -16,4 +16,5 @@
 
 #'''clastic''' - Adj -  A rock or geologic unit containing a significant percentage of clasts.
 #'''pyroclastic''' - Adj - A rock containing clasts of [[volcanic]] origin.
-#'''Pyroclastic flow''' - N - A hot flow of volcanic ash, dust, and debris that cascades down the slope of a volcano during an eruption.
+#'''[[Pyroclastic flow]]''' - N - A hot flow of volcanic ash, dust, and debris that cascades down the slope of a volcano during an eruption.
+[[Category:Geology]]
