--- a/wiki/%E8%A3%A4.wikitext
+++ b/wiki/%E8%A3%A4.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': trousers, pants
+* '''Common Meaning''': [[trousers]], pants
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,21 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[褲]]
+
+===Compounds===
+*[[裤衩]], [[裤衩儿]]
+*[[裤带]]
+*[[裤裆]]
+*[[裤兜]], [[裤兜儿]]
+*[[裤管]]
+*[[裤脚]], [[裤脚儿]]
+*[[裤筒]]
+*[[裤头]], [[裤头儿]]
+*[[裤腿]], [[裤腿儿]]
+*[[裤袜]]
+*[[裤线]]
+*[[裤腰]]
+*[[裤子]]
 
 * '''Other info''': 
 
