--- a/wiki/%E5%85%9C.wikitext
+++ b/wiki/%E5%85%9C.wikitext
@@ -14,7 +14,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,11 +26,31 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': dau1
 
+===Compounds===
+*[[兜捕]]
+*[[兜抄]]
+*[[兜底]], [[兜底儿]]
+*[[兜兜]]
+*[[兜兜裤儿]]
+*[[兜兜嘴儿]]
+*[[兜肚]]
+*[[兜风]]
+*[[兜剿]]
+*[[兜揽]]
+*[[兜脸]]
+*[[兜圈子]]
+*[[兜儿]]
+*[[兜售]]
+*[[兜头]]
+*[[兜头盖脸]]
+*[[兜销]]
+*[[兜子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[とう]] (tō)
