--- a/wiki/incense.wikitext
+++ b/wiki/incense.wikitext
@@ -8,6 +8,7 @@
 *{{nl}}: [[wierook]] ''m''
 *{{el}}: [[λιβανος]] ''m''
 *{{es}}: [[incienso]] ''m''
+*{{fi}}: [[suitsuke]]
 *{{fr}}: [[encens]] ''m''
 *{{zh}}: [[香]], xīang
 *{{ja}}: [[お香]], o-koh
