--- a/wiki/%E6%89%8D.wikitext
+++ b/wiki/%E6%89%8D.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#talent, ability
-*# just, only
+*# [[talent]], [[ability]]
+*# [[just]], [[only]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,45 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': choi4
 
+===Compounds===
+*[[才德兼备]]
+*[[才调]]
+*[[才分]]
+*[[才赋]]
+*[[才干]]
+*[[才刚]]
+*[[才高八斗]]
+*[[才华]]
+*[[才具]]
+*[[才俊]]
+*[[才力]]
+*[[才路]]
+*[[才略]]
+*[[才貌]]
+*[[才名]]
+*[[才能]]
+*[[才女]]
+*[[才气]]
+*[[才器]]
+*[[才情]]
+*[[才人]]
+*[[才识]]
+*[[才士]]
+*[[才疏学浅]]
+*[[才思]]
+*[[才望]]
+*[[才绪]]
+*[[才学]]
+*[[才艺]]
+*[[才藻]]
+*[[才智]]
+*[[才子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さい]] (sai), [[ざい]] (zai)
