--- a/wiki/abandoned_child_syndrome.wikitext
+++ b/wiki/abandoned_child_syndrome.wikitext
@@ -1,4 +1,4 @@
-'''Abandonded child syndrome''' is the [[behaviour]]al or [[psychology|psychological]] attributes that a child develops as a result of one or both parents disappearing from their lives.  It is very similar in nature to [[post traumatic stress syndrome]], and symptoms include:
+'''Abandonded child syndrome''' is the [[behaviour]]al or [[psychology|psychological]] attributes that a child develops as a result of one or both parents disappearing from their lives.  It is very similar in nature to [[posttraumatic stress disorder]], and symptoms include:
 
 * Alienation from their environment
 * Extreme changes in state of mind and [[depression]]
@@ -9,6 +9,6 @@
 
 Children tend to relive the shocking event by way of games or play because the role of imagination is much greater for young people.  Typically, abandoned children become increasingly guiet or aggressive, out or control, or hard to handle.
 
-Many children suffering from abandoned child syndrome are quite often society's [[thrown away children]].  They are children who have left home of their own accord or were forced out of their homes because the rejection, neglect, and/or abuse was so great.
+Many children suffering from abandoned child syndrome a left home of their own accord, or were forced out of their homes because the rejection, neglect, or abuse was so great.
 
-[[Category:Psychology]]
+[[Category:Abnormal psychology]]
