+See also <-ja#57048>

--- a/wiki/-ja.wikitext
+++ b/wiki/-ja.wikitext
@@ -8,6 +8,12 @@
 # Used to form "doer" nouns, usually human, from verbal stems, [[-er]].
 
 ====Notes====
-The final '''e''' of the stem changes to '''i''' when suffixing. 
+*The final '''-e-''' of the stem changes to '''-i-''' when suffixing. 
+*After /i/, the /j/ may be silent or almost silent.
 
-After /i/, the /j/ may be silent or almost silent.
+===See also===
+*[[-ari#Finnish|-ari]]
+*[[-in#Finnish|-in]]
+*[[-kko#Finnish|-kko]]
+*[[-tar#Finnish|-tar]]
+*[[-uri#Finnish|-uri]]
