+Finnish case suffix, usage <-in#55541>

--- a/wiki/-in.wikitext
+++ b/wiki/-in.wikitext
@@ -3,6 +3,22 @@
 ===Case suffix===
 '''-in'''
 
+# Suffix for the [[genitive]] plural.
+
+====Usage====
+*Suffixed to the nominative singular but the final '''-i''' changes to '''-e-'''.
+*Nowadays This suffix is rare and usually gives archaic tone. Certain names, however, retain this, eg. ''Yhdysvaltain'' from ''[[Yhdysvallat]]'' (singular stem '''Yhdysvalta-'''), where also the more modern form ''Yhdysvaltojen'' is possible.
+
+====See also====
+*[[-den#Finnish|-den]]
+*[[-en#Finnish|-en]]
+*[[-n#Finnish|-n]]
+*[[-ten#Finnish|-ten]]
+*[[-tten#Finnish|-tten]]
+
+===Case suffix===
+'''-in'''
+
 # Suffix variant for the illative singular, see [[-Vn]].
 
 ===Adjectival suffix===
@@ -49,4 +65,7 @@ The suffix has the form '''-in''' only in the nominative and partitive singular.
 The suffix has the form '''-in-''' in the partitive singular, '''-ime-''' in other singular cases and the nominative plural and '''-imi-''' in other plural cases. The stem can undergo reverse gradation.
 
 ====See also====
+*[[-ari#Finnish|-ari]]
 *[[-ja#Finnish|-ja]]
+*[[-tar#Finnish|-tär]]
+*[[-uri#Finnish|-uri]]
