--- a/wiki/%E6%88%90.wikitext
+++ b/wiki/%E6%88%90.wikitext
@@ -14,7 +14,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -25,6 +25,107 @@
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': sing4
+
+===Compounds===
+*[[成案]]
+*[[成百]]
+*[[成败]]
+*[[成帮结伙]]
+*[[成倍]]
+*[[成本]]
+*[[成本会计]]
+*[[成才]]
+*[[成材]]
+*[[成材林]]
+*[[成虫]]
+*[[成典]]
+*[[成丁]]
+*[[成堆]]
+*[[成对]]
+*[[成法]]
+*[[成方]], [[成方儿]]
+*[[成分]], [[成份]]
+*[[成风]]
+*[[成个儿]]
+*[[成功]]
+*[[成规]]
+*[[成果]]
+*[[成行]]
+*[[成婚]]
+*[[成活]]
+*[[成绩]]
+*[[成家]]
+*[[成家立业]]
+*[[成见]]
+*[[成交]]
+*[[成就]]
+*[[成立]]
+*[[成例]]
+*[[成殓]]
+*[[成林]]
+*[[成龙配套]]
+*[[成眠]]
+*[[成名]]
+*[[成名成家]]
+*[[成命]]
+*[[成年]]
+*[[成年累月]]
+*[[成批]]
+*[[成癖]]
+*[[成品]]
+*[[成品粮]]
+*[[成气候]]
+*[[成器]]
+*[[成千上万]]
+*[[成亲]]
+*[[成全]]
+*[[成群]]
+*[[成人]]
+*[[成人教育]]
+*[[成人之美]]
+*[[成仁]]
+*[[成色]]
+*[[成式]]
+*[[成事]]
+*[[成事不足，败事有余]]
+*[[成书]]
+*[[成熟]]
+*[[成数]]
+*[[成双]]
+*[[成说]]
+*[[成讼]]
+*[[成算]]
+*[[成套]]
+*[[成天]]
+*[[成为]]
+*[[成文]]
+*[[成文法]]
+*[[成问题]]
+*[[成想]]
+*[[成效]]
+*[[成心]]
+*[[成行]]
+*[[成形]]
+*[[成型]]
+*[[成性]]
+*[[成宿]]
+*[[成药]]
+*[[成也萧何，败也萧何]]
+*[[成夜]]
+*[[成衣]]
+*[[成议]]
+*[[成因]]
+*[[成阴]]
+*[[成瘾]]
+*[[成语]]
+*[[成员]]
+*[[成约]]
+*[[成灾]]
+*[[成章]]
+*[[成则为王，败则为贼]]
+*[[成长]]
+*[[成竹在胸]]
+*[[成总儿]]
 
 * '''Other info''': 
 
