--- a/wiki/study.wikitext
+++ b/wiki/study.wikitext
@@ -9,7 +9,7 @@
 *[[Esperanto]]: [[studi]]
 *Finnish: [[opiskella]], [[opetella]]
 *French: [[étudier]]
-*German: [[studieren]]
+*German: [[studieren]], [[lernen]]
 *Italian: [[studiare]]
 *Portuguese: [[estudar]]
 *Russian: [[изучать]] (izučát')
