--- a/wiki/nesh.wikitext
+++ b/wiki/nesh.wikitext
@@ -1,5 +1,11 @@
-nesh - personal attribute - averse to cold air, or cold water - more averse than normal.
+==English==
 
+===Adjective===
+
+# personal attribute - averse to cold air, or cold water - more averse than normal.
+
+===Examples / Explanation===
+person averse to going out in cold weather, someone who puts on warm clothing at the slightest hint of a coolish breeze, someone who is averse to going swimming because the water is less than ideally warm.
+
+===Locality===
 This word seems to be specific to an area around Stafford, in the North West Midlands of England.
-
-Examples - person averse to going out in cold weather, someone who puts on warm clothing at the slightest hint of a coolish breeze, someone who is averse to going swimming because the water is less than ideally warm.
