--- a/wiki/mardy.wikitext
+++ b/wiki/mardy.wikitext
@@ -1,5 +1,11 @@
-Mardy - personal attribute, most usually applied to a child -  cries easily, is unusually sensitive, sad. ''Derogatory''
+==English==
 
+===Adjective===
+
+# personal attribute, most usually applied to a child -  cries easily, is unusually sensitive, sad. ''Derogatory''
+
+===Examples / Explanation===
 Possibly derived from the concept of the child being 'marred', flawed.
 
-This word seems to be specific to an area around Stafford, NorthWest Midlands, England
+===Locality===
+This word seems to be specific to an area around Stafford, in the North West Midlands of England.
