--- a/wiki/nip.wikitext
+++ b/wiki/nip.wikitext
@@ -1,6 +1,8 @@
 ==Noun==
 
 # A small [[bite]].
+# There is a ''nip'' in the air - the air/weather is cold.
+# A ''nip'' and tuck affair - a very close match, competition, challenge.
 
 ----
 ==Noun (2)==
