--- a/wiki/litter.wikitext
+++ b/wiki/litter.wikitext
@@ -18,6 +18,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Italian: [[rifiuti]] ''m plural''
+*Lithuanian: [[šiukšlės]] ''f, pl'', sometimes [[pabiros]] ''f, pl''
 |}
 |}
 
@@ -30,5 +31,6 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[vada]] ''f''
 |}
 |}
