--- a/wiki/amphibian.wikitext
+++ b/wiki/amphibian.wikitext
@@ -19,6 +19,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[varliagyvis]] ''m'', [[amfibija]] ''f''
 *[[Lojban]]: [[banfi]]
 *Slovene: [[dvoživka]] ''f''
 *Spanish: [[anfibio]] ''m''
