--- a/wiki/agouti.wikitext
+++ b/wiki/agouti.wikitext
@@ -5,7 +5,7 @@
 #A [[rodent]] similar in appearance to a [[guinea pig]] but having longer [[leg]]s.
 
 ==Translations==
-
+*Lithuanian: [[agutis]] ''m''
 *[[Persian]]: [[كم‌گوش]] (kamgush)
 
 ===See also===
