--- a/wiki/nip.wikitext
+++ b/wiki/nip.wikitext
@@ -1,6 +1,6 @@
 ==Noun==
 
-# A small [[bite]].
+# A small [[bite]], a [[pinch]].
 # There is a ''nip'' in the air - the air/weather is cold.
 # A ''nip'' and tuck affair - a very close match, competition, challenge.
 
@@ -11,4 +11,12 @@
 
 ===Etymology===
 
+English: ''Nippon'' - Romanized version of [[日本]], the native Japanese name for [[Japan]].
+
 Japanese: ''nihon'': Japan.
+
+==Verb==
+
+# To make a quick , short journey (usually a return journey)
+*#*I'm just nipping to the shops
+*#*I'm just nipping into the garage
