--- a/wiki/four-legged.wikitext
+++ b/wiki/four-legged.wikitext
@@ -10,6 +10,9 @@
 ====Synonyms====
 *[[quadruped]], [[quadrupedal]]
 
+====Translations====
+*Lithuanian: [[keturkojis]] ''m'', [[keturkojė]] ''f''
+
 ===See also===
 *[[bipedal]]
 *[[decapodal]]
