/* Noun */ <ugly duckling#51788>

--- a/wiki/ugly_duckling.wikitext
+++ b/wiki/ugly_duckling.wikitext
@@ -1,6 +1,8 @@
 ==English==
 === Noun ===
 '''[[ugly]] [[duckling]]'''
+#A young person who is ugly, but who it is expected will become beautiful as they mature
+ - from the folk/fairy tale of a duckling considered ugly, but which in fact matures into a magnificent swan, far more beautiful than the ducks.
 
 ==== Translations ====
 *Catalan: [[aneguet lleig]] ''m''
