--- a/wiki/ugly_duckling.wikitext
+++ b/wiki/ugly_duckling.wikitext
@@ -1,7 +1,7 @@
 ==English==
 === Noun ===
 '''[[ugly]] [[duckling]]'''
-#A young person who is ugly, but who it is expected will become beautiful as they mature
+#A young person who is ugly, but who is expected to become beautiful as they mature
  - from the folk/fairy tale of a duckling considered ugly, but which in fact matures into a magnificent swan, far more beautiful than the ducks.
 
 ==== Translations ====
