--- a/wiki/litre.wikitext
+++ b/wiki/litre.wikitext
@@ -5,11 +5,13 @@
 #The [[metric]] [[unit]] of [[fluid measure]]; one [[cubic]] [[decimetre]].  Symbols: l, L, &#2113; (''Notes: the litre is not an SI unit but is accepted for use with SI units.  The official SI symbols are the capital L or lower-case roman l.  The script symbol &#2113;, while not officially sanctioned, is often used in non-technical contexts to prevent the lower-case roman l being confused with the number 1 (one).'')
 
 ====Translations====
-
+*Chinese: [[升]], [[公升]]
 *Finnish: [[litra]]
 *French: litre ''m''
 *Italian: [[litro]] ''m''
+*Japanese: [[リットル]], [[㍑]]
 *Latvian: [[litrs]] ''m''
+*Lithuanian: [[litras]] ''m''
 *Swedish: [[liter]] ''c''
 
 ====See also====
