changed "ugly frog duckling" to "ugly ducking", and made entry for "ugly duckling" <ugly#41648>

--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -1,15 +1,15 @@
 ===Adjective===
 '''ugly''' ([[uglier]], [[ugliest]])
 
-# very unattractive
-# displeasing to the eye
+# very unattractive, repulsive
+# displeasing to the eye, or ear, or sensibilities
 # not asthetically pleasing
 
 ====Antonyms====
 *[[beautiful]], [[gorgeous]]
 
 ====Related terms====
-*[[ugly frog duckling]]
+*[[ugly duckling]]
 
 ====Translations====
 *Chineese: [[難看]], [[难看]]
