Correct typo/mispelling <ugly#41648>

--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -12,7 +12,7 @@
 *[[ugly duckling]]
 
 ====Translations====
-*Chineese: [[難看]], [[难看]]
+*Chinese: [[難看]], [[难看]]
 *Dutch: [[lelijk]], [[lelijke]]
 *Finnish: [[ruma#Finnish|ruma]] (1, 2), [[epäesteettinen]] (2)
 *French: [[laid]] ''m'', [[laide]] ''f''
