Chortling can be loud, but must be inward or suppressed in that case. <chortle#38910>

--- a/wiki/chortle.wikitext
+++ b/wiki/chortle.wikitext
@@ -4,7 +4,7 @@ a portmanteau word with [[chuckle]] and [[snort]]. First used in the poem ''Jabb
 ===Intransitive verb===
 '''chortle'''
 
-# to laugh, usually a little laugh.
+# to laugh, usually a quiet, inward or partly suppressed laugh.
 
 ===Synonyms===
 *[[laugh]]
