small changes <love#2682>

--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -37,9 +37,9 @@
 *Latvian: [[mīlēt]]
 *Portuguese: [[amar]]
 *Russian: [[:ru:любить|любить]]
-*Spanish: [[amar]], [[querer]]
+*Spanish: [[:es:amar|amar]], [[:es:querer|querer]]
 *{{sk}}: [[milovať]], [[ľúbiť]]
-*Swedish: [[älska]], [[vara kär i]]
+*Swedish: [[:sv:älska|älska]], [[vara kär i]]
 *Tamil: [[காதலி]] (between man and woman-sexual love)
 *Marathi: PREM
 |}
@@ -53,13 +53,13 @@
 *Catalan: [[agradar]]
 *Chinese: [[喜欢]]/[[喜歡]] (xihuan), [[爱好]]/[[愛好]] (aihao)
 *Estonian: [[armastama]]
-*Finnish: [[pitää]] [[paljon]]/[[kovasti]], [[rakastaa]]
-*French: [[aimer]] [[beaucoup]], aimer [[bien]], [[vouloir]] [[beaucoup]]
+*Finnish: [[:fi:pitää|pitää]] [[:fi:paljon|paljon]]/[[kovasti]], [[rakastaa]]
+*French: [[:fr:aimer|aimer]] [[:fr:beaucoup|beaucoup]], aimer [[bien]], [[vouloir]] [[beaucoup]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*German: [[lieben]]
+*German: [[:de:lieben|lieben]]
 *Italian: [[volere]] [[molto]]
 *Japanese: [[気に入っている]]
 *Latvian: [[patikt]], [[mīlēt]]
@@ -186,7 +186,7 @@ The translations below need to be checked by native speakers and then inserted i
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Estonian: [[armastus]]
-*Finnish: [[romantiikka]], [[lempi]] (''physical or poetic''), [[rakkaus]]
+*Finnish: [[:fi:romantiikka|romantiikka]], [[lempi]] (''physical or poetic''), [[rakkaus]]
 *French: [[:fr:amour|amour]] ''m''
 *German: [[:de:Liebe|Liebe]] ''f''
 *Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
@@ -276,7 +276,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Indonesian: [[cinta]], [[kasih]], [[sayang]]
 *Interlingua: [[amor]]
 *Korean: [[사랑]] (sarang)
-*Latin: [[amor]]
+*Latin: [[:la:amor|amor]]
 *Polish: [[miłość]] ''f''
 *Romanian: [[dragostea]] ''f''
 *[[Romanica]]: [[amor]] ''m''
@@ -317,6 +317,7 @@ The translations below need to be checked by native speakers and then inserted i
 [[sv:love]]
 
 ==[[Multilingual associations]]==
-*[[Hebrew]]: '''love''' ב[[:he:לב|לב]] /ba lev/ (in [[heart]]), '''love''' ו[[:he:ללבלב|ללבלב]] /ve lelavlev/ (and [[blossom]]) 
+*[[Hebrew]]: '''love''' ב[[:he:לב|לב]] /ba l'ev/ (in [[heart]]), '''love''' ו[[:he:ללבלב|ללבלב]] /ve l'elavl'ev/ (and [[blossom]]) 
+*[[Russian]]: I love you - [[:ru:я|я]] /ja/ тебя /t'ebja/ люблю /l'ubl'u/ 
 
 [[Category:Nouns]][[Category:Transitive Verbs]][[Category:Intransitive Verbs]]
