fmt; dewikify; remove empty/useless stuff <accompletive#33767>

--- a/wiki/accompletive.wikitext
+++ b/wiki/accompletive.wikitext
@@ -1,8 +1,6 @@
-===[[Etymology]]===
+==English==
+===Etymology===
 Latin ''[[ad]]'' + ''[[complere]]'', ''[[completum]]'', to fill up.
-===[[Pronunciation]]===
-'''ac-com'ple-tive
-*[[IPA]]: //
-*[[SAMPA]]: //
-===[[Adjective]]===
-#''(Rare):'' Tending to accomplish
+
+===Adjective===
+#''(Rare)'' Tending to [[accomplish]]
