fmt; remove cruft <accompliceship#33768>

--- a/wiki/accompliceship.wikitext
+++ b/wiki/accompliceship.wikitext
@@ -1,8 +1,8 @@
-===[[Etymology]]===
-accomplice + [[-ship]]
-===[[Pronunciation]]===
-'''ac-com'plice-ship'''
-*[[IPA]]: //
-*[[SAMPA]]: //
-===[[Noun]]===
-#''(Rare):'' The state of being an accomplice - [[Sir H. Taylor]]
+==English==
+===Etymology===
+[[accomplice]] + [[-ship]]
+
+===Noun===
+'''accompliceship'''
+
+#''(Rare)'' The state of being an accomplice - [[Sir H. Taylor]]
