--- a/wiki/nancy.wikitext
+++ b/wiki/nancy.wikitext
@@ -6,8 +6,9 @@
 
 ===Noun===
 '''nancy''' (''plural'' '''nancies''')
+*Also '''nance''', '''nancy boy'''
 
-#(''derogatory slang'') An [[effeminate]] [[homosexual]] man.
+#(''derogatory slang'') An [[effeminate]] man, especially a [[homosexual]].
 
 ===Synonyms===
 *[[fairy]], [[nancy boy]], [[poof]] (''British''), [[queen]]
