--- a/wiki/nancy.wikitext
+++ b/wiki/nancy.wikitext
@@ -11,7 +11,7 @@
 #(''derogatory slang'') An [[effeminate]] man, especially a [[homosexual]].
 
 ===Synonyms===
-*[[fairy]], nancy boy, [[poof]] (''British''), [[queen]]
+*[[fairy]], [[poof]] (''British''), [[queen]]
 
 ====Translations====
 *French: [[folle]] ''f''
