--- a/wiki/nancy.wikitext
+++ b/wiki/nancy.wikitext
@@ -12,6 +12,7 @@
 
 ===Synonyms===
 *[[fairy]], [[poof]] (''British''), [[queen]]
-
-====Translations====
+===Related===
+*[[Metrosexual]]
+===Translations===
 *French: [[folle]] ''f''
