+see also; title case -> sentence case <A4#65028>

--- a/wiki/A4.wikitext
+++ b/wiki/A4.wikitext
@@ -1,5 +1,4 @@
 =={{En}}==
-
 ===Noun===
 '''A4'''
 
@@ -7,7 +6,10 @@
 #: ''This printer can handle Letter, Legal and A4.''
 #: ''Hand me a sheet of A4 paper, please.''
 
-===Proper Noun===
+====See also====
+*[[foolscap]]
+
+===Proper noun===
 '''A4'''
 
 # A major thoroughfare in England
