etym to top; uncountable <suede#65029>

--- a/wiki/suede.wikitext
+++ b/wiki/suede.wikitext
@@ -1,6 +1,8 @@
 =={{En}}==
-===Noun===
-# A type of soft [[leather]], made from [[calfskin]], with a [[brushed]] [[texture]] to resemble [[fabric]]. It is often to make [[boots]], [[clothing]] and [[fashion]] accessories.
-
 ===Etymology===
 French ''[[Suède]]'' Sweden, swedish
+
+===Noun===
+'''suede''' (''uncountable'')
+
+# A type of soft [[leather]], made from [[calfskin]], with a [[brushed]] [[texture]] to resemble [[fabric]]. It is often used to make [[boots]], [[clothing]] and [[fashion]] accessories.
