--- a/wiki/%E6%88%90.wikitext
+++ b/wiki/%E6%88%90.wikitext
@@ -10,7 +10,7 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': completed, finished, fixed
+* '''Common Meaning''': [[completed]], [[finished]], [[fixed]]
 
 ----
 
@@ -131,7 +131,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せい]] (sei), [[じょう]] (jō)
@@ -141,9 +141,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 성
+* '''[[Hangeul]]''': [[성]]
 
 * '''[[Eumhun]] reading''': 
 
