--- a/wiki/toad.wikitext
+++ b/wiki/toad.wikitext
@@ -15,9 +15,10 @@
 *Finnish: [[rupikonna]] (1, ''Bufo vulgaris''), [[konna]] (1)
 *French: [[crapaud]] ''m''
 *German: [[Kröte]] ''f''
-*Hebrew: [[קרפדה|קַרְפָּדָה]], [[גועל|גוֹעַל]]
+*Hebrew: [[קרפדה|קַרְפָּדָה]],   ''f'' [[גועל|גוֹעַל]]
 *Italian: [[rospo]] ''m''
 *Lithuanian: [[rupūžė]] ''f''
+*Polish: [[ropucha]] ''f''
 *Slovene: [[krastača]] ''f'', [[krota]] ''f'' (colloquial)
 *Spanish: [[sapo]] ''m''
 *Swedish: [[padda]]
