--- a/wiki/woven.wikitext
+++ b/wiki/woven.wikitext
@@ -1,4 +1,14 @@
-A '''woven''' is a [[cloth]] formed by [[weaving]].  It only stretches in the [[bias#textiles|bias]] directions (between the [[warp]] and [[weft]] directions), unless the threads are elastic.  Woven cloth usually [[fray|frays]] at the edges, unless measures are taken to counter this, such as the use of [[pinking shears]] or [[hemming]].
-Most cloth in use is woven.
+==English==
+=== Pronunciation ===
+*[[w:IPA|IPA]]: /'wovən/
 
-See: [[Non-woven]]
+=== Verb ===
+'''woven'''
+
+# past participle of ''to [[weave]]''
+#:''The spider had '''woven''' her web on a corner of the attic.'' 
+
+==== Translations ====
+*Dutch: [[geweven]]
+*[[Interlingua]]: [[texite]]
+*Spanish: [[tejido]]
