--- a/wiki/frag.wikitext
+++ b/wiki/frag.wikitext
@@ -6,7 +6,7 @@ From U.S. military slang in the Vietnam War, frag commonly meant to kill an unpo
 ===Transitive verb===
 '''to frag''' ''(past and past participle fragged)''
 #to kill another player (or computer opponent) in a deathmatch game.
-#:''I fragged him but fell off the ledge afterwards.''
+#:''I fragged him but he fell off the ledge afterwards.''
 #to kill another player (or computer opponent) with a grenade in the game.
 
 ===Noun===
