--- a/wiki/toad.wikitext
+++ b/wiki/toad.wikitext
@@ -17,6 +17,7 @@
 *German: [[Kröte]] ''f''
 *Hebrew: [[קרפדה|קַרְפָּדָה]],   ''f'' [[גועל|גוֹעַל]]
 *Italian: [[rospo]] ''m''
+*Japanese: [[ひきがえる]]
 *Lithuanian: [[rupūžė]] ''f''
 *Polish: [[ropucha]] ''f''
 *Slovene: [[krastača]] ''f'', [[krota]] ''f'' (colloquial)
