/* See also */ <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -76,8 +76,7 @@ Many modern students have made the mistake of thinking that since much of Zen so
 *[[koan]]
 *[[Seon]]
 *[[Tathagatagarbha doctrine#Tath&#257;gatagarbha in Zen|Buddha-nature]]
-
-
+*[[Ryoju Kikuchi]] (Tamo Samma)
 
 == External links ==
 *[http://directory.google.com/Top/Society/Religion_and_Spirituality/Buddhism/Lineages/Zen/Centers/ Google Directory - Zen Centers]
