--- a/wiki/civilization.wikitext
+++ b/wiki/civilization.wikitext
@@ -9,8 +9,9 @@ From Latin ''[[civilizatio]]'', verbal noun of action from ''[[civilizatus]]'' +
 # a country or group of countries with a common cultural background
 # a stage or system of social, political or technical development of a large scale order encompassing several or many [[community|communities]], often on the [[nation]] or [[people]] scale. <i>(ancient civilisations; western civilisation; the Aztec civilisation.) cf [[culture]]</i>.
 # a [[communal understanding]]; the achievements of a communal understanding; e.g., Ancient Roman Civilization - the communal understanding of the ancient Romans, or what the communal understanding  of the ancient Romans achieved: buildings, conquests, roads, laws.  
-===Noun (3)===
+===Proper Noun (3) - Civilization===
 # Collectively, those people of the world considered to have a high standard of behavior and / or a high level of development. Commonly subjectively used by people of one civilisation to exclusively refer to their civilisation, or their elite sub-group, or a few associated civilisations, implying all others, in time or geography or status, as something less than [[civilise|civilised]], as [[savage|savages]] or [[barbarian|barbarians]]. <i>cf [[refinement]], [[elitism]], [[civilised society]], the Civilised World</i>
+
 === Further Reading ===
 see [http://www.ourcivilisation.com/define.htm civilization explained]
 and [http://www.ourcivilisation.com/theory.htm a theory of civilization]<br>
