--- a/wiki/soil_science.wikitext
+++ b/wiki/soil_science.wikitext
@@ -1,6 +1,7 @@
 ===Noun===
 '''soil science'''
-# That science dealing with soils as a natural resource on the surface of the earth including soil formation, classification and mapping; physical, chemical, biological, and fertility properties of soils per se; and these properties in relation to the use and management of soils.
+# The study of soils.
+
 ====Related Terms====
 # [[edaphology]]
 # [[pedology]]
