--- a/wiki/edaphology.wikitext
+++ b/wiki/edaphology.wikitext
@@ -1,7 +1,6 @@
 ===Noun===
 '''edaphology'''
-# The sub-discipline of [[soil science]] that studies the effects of soil conditions on natural systems, especially plants.
-
+# The branch of [[soil science]] that studies the effects of soil conditions on natural systems.
 ====Related terms====
 # [[agrology]]
 # [[pedology]]
