--- a/wiki/%E8%B4%88.wikitext
+++ b/wiki/%E8%B4%88.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#give present
-*# bestow, confer
+*# give present
+*# [[bestow]], [[confer]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,15 +34,26 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[赠]]
 
+===Compounds===
+*[[贈答]]
+*[[贈品]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぞう]] (zō), [[そう]] (sō)
-** '''[[Kun]]''': [[おくる]] (okuru)
+** '''[[Kun]]''': [[おくる]] (okuru, [[贈る]])
+
+===Compounds===
+*[[贈呈]]
+*[[贈答]]
+*[[贈与]]
+*[[贈賄]]
+*[[贈り物]]
 
 * '''Other info''':  
 
