/* See also */ Jenny link <pedology#63532>

--- a/wiki/pedology.wikitext
+++ b/wiki/pedology.wikitext
@@ -13,4 +13,4 @@ The sub-discipline of [[soil science]] that:
 ====See also====
 # [http://en.wikipedia.org/wiki/USA_soil_taxonomy Soil Taxonomy]
 # [http://en.wikipedia.org/wiki/Pedology_%28soil_study%29 Pedology]
-# [http://en.wikipedia.org/wiki/Hans_Jenny Hans Jenny]
+# [http://en.wikipedia.org/wiki/Hans_Jenny_%281899_-_1992%29 Hans Jenny]
