--- a/wiki/pedology.wikitext
+++ b/wiki/pedology.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-'''pedology'''
+'''pedology'''<br>
 The sub-discipline of [[soil science]] that:
 # Studies soils as a component of natural systems.
 # Deals with [[soil genesis]] and [[soil classification]].
