--- a/wiki/edaphic.wikitext
+++ b/wiki/edaphic.wikitext
@@ -1,8 +1,7 @@
 ===Adjective===
-'''edaphic'''
-#  Of or pertaining to the soil.
+'''edaphic''', adjective
+#  Soil.
 #  Relating to, or determined by, conditions of the soil,  especially as it relates to biological systems.
-#  Resulting from or influenced by factors inherent in the soil or other substrate, rather than by climatic factors.
 #  Soil characteristics, such as water content, pH, texture, and nutrient availability, that influence the type and quantity of vegetation in an area.
 
 ====Related terms====
