fmt, +lv, ext link, cut the definition <appendicitis#65071>

--- a/wiki/appendicitis.wikitext
+++ b/wiki/appendicitis.wikitext
@@ -1,2 +1,12 @@
-- inflammation of the appendix
-- disease process affecting the appendix, characterized by inflammation, abdominal pain, fever, nausea and vomiting.  Characterized by inflammation or rupture of the appendix, which is a medical emergency.
+==English==
+===Noun===
+'''appendicitis'''
+# inflammation of the appendix
+# disease process affecting the appendix, characterized by inflammation, abdominal pain, fever, nausea and vomiting.  Characterized by inflammation or rupture of the appendix, which is a medical emergency.
+
+====Translations====
+*Latvian: [[apendicīts]] ''m''
+
+----
+===External links===
+*[[w:appendicitis|Wikipedia article on appendicitis]].
