cut the definition <appendicitis#65071>

--- a/wiki/appendicitis.wikitext
+++ b/wiki/appendicitis.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Noun===
 '''appendicitis'''
-# inflammation of the appendix
-# disease process affecting the appendix, characterized by inflammation, abdominal pain, fever, nausea and vomiting.  Characterized by inflammation or rupture of the appendix, which is a medical emergency.
+# inflammation of the [[appendix]]
+# disease process affecting the [[appendix]]
 
 ====Translations====
 *Latvian: [[apendicīts]] ''m''
