--- a/wiki/produce.wikitext
+++ b/wiki/produce.wikitext
@@ -12,3 +12,4 @@
 #[[Eatable]] parts of [[flora]] [[harvest]]ed, [[Grow]]n [[vegeatable]]s, [[fruit]]s
 
 *[[Finnish]]: [[sato]], [[hedelmät]]
+*[[Spanish]]: [[producto]]
