interwiki +pl <Dezember#1782>

--- a/wiki/Dezember.wikitext
+++ b/wiki/Dezember.wikitext
@@ -7,5 +7,5 @@
 '''Dezember'''
 *[[December]]; the twelfth [[month]] in the Gregorian [[calendar]]. It has 31 [[day]]s.
 
-[[de:dezember]]
+[[de:dezember]][[pl:Dezember]]
 [[sv:dezember]]
