--- a/wiki/bemoeial.wikitext
+++ b/wiki/bemoeial.wikitext
@@ -8,4 +8,4 @@
 * French: [[touche-à-tout]] - Quelqu'un qui se mêle d'autres
 * German: Einer der sich mischt mit Anderen
 
-[[nl:Bemoeial]]
+[[nl:bemoeial]]
