--- a/wiki/pulse.wikitext
+++ b/wiki/pulse.wikitext
@@ -7,7 +7,7 @@ Latin '''[[puls]]''', akin to ''[[pollen]]''
 Latin '''[[pulsus]]'''&mdash;''beat'', from '''pellere'''&mdash;''to drive''
 ===Noun===
 '''pulse'''
-#A regular beat of the arteries caused by the action of the heart.
+#A normally regular beat felt when arteries are depressed, caused by the pumping action of the heart.
 #A [[beat]], [[throb]].
 #In music a '''pulse''' is periodically recurring short stimuli which are perceived as points in time. (DeLone et. al. (Eds.), 1975, chap. 3) Often the stimuli are defined as identical (Cooper & Meyer, 1960).
 # An annual [[leguminous]] crop yielding from 1 to 12 grains or seeds of variable size, shape and colour within a pod. Pulses are used for food and animal feed.
@@ -18,6 +18,7 @@ Latin '''[[pulsus]]'''&mdash;''beat'', from '''pellere'''&mdash;''to drive''
 
 ====See Also====
 * [[beat]]
+* [[arrythmia]]
 * [[blood pressure]]
 * [[heart beat]]
 * [[meter]]
