/* Alternative spellings */ <Qur'an#35840>

--- a/wiki/Qur%27an.wikitext
+++ b/wiki/Qur%27an.wikitext
@@ -2,9 +2,10 @@
 '''qur'an'''
 
 ====Alternative spellings====
-*[[alcoran]] (obsolete)
+*[[quraan]]
 *[[koran]]
 *[[quran]]
+*[[alcoran]] (obsolete)
 
 #Usually with the definite article, the [[Islamic]] Holy book.
 #A copy of the Qur'an.
