/* Noun */ <Qur'an#35840>

--- a/wiki/Qur%27an.wikitext
+++ b/wiki/Qur%27an.wikitext
@@ -1,5 +1,5 @@
 === Noun ===
-'''qur'an''' The holy book of the Muslims.
+'''qur'an''' The holy book of the [[Muslims]].
 
 ====Alternative spellings====
 *[[quraan]]
