--- a/wiki/turf_war.wikitext
+++ b/wiki/turf_war.wikitext
@@ -1,4 +1,7 @@
-'''Turf war''' is a [[business]] term that describes a common problem in larger [[company|companies]] when two divisions fight for access to [[resources]] or capital. They usually break out due to improper [[management]] further up the corporate [[hierarchy]].
+'''Turf war''' is a term that describes a common problem in larger [[company|companies]] when two divisions fight for access to [[resources]] or capital. They usually break out due to improper [[management]] further up the corporate [[hierarchy]].
 
 It can also be described as contention for any resource between two or more parties resulting in [[confrontation]]
+
+Phrase may have originated as a reference to the game of [[American Football]] where two teams confront each other on a field of [[Poaceae|grass]] also known as [[Turf]].
+
 {{msg:stub}}
