--- a/wiki/nacre.wikitext
+++ b/wiki/nacre.wikitext
@@ -4,4 +4,4 @@
 
 '''nacre'''
 
-#A pearly substance which lines the interior of many shells, and is most perfect in the mother-of-pearl. [Written also nacker and naker.] See Pearl, and Mother-of-pearl.
+#A pearly substance which lines the interior of many shells, and is most perfect in the mother-of-pearl. [Written also nacker and naker.] See [[Pearl]], and [[Mother-of-pearl]].
