/* Noun */ <mother-of-pearl#62285>

--- a/wiki/mother-of-pearl.wikitext
+++ b/wiki/mother-of-pearl.wikitext
@@ -4,4 +4,4 @@
 
 '''mother-of-pearl'''
 
-#The hard pearly internal layer of several kinds of shells, esp. of pearl oysters, river mussels, and the abalone shells; nacre. See Pearl.
+#The hard pearly internal layer of several kinds of shells, esp. of pearl oysters, river mussels, and the abalone shells; [[nacre]]. See [[Pearl]].
