--- a/wiki/hipocres%C3%ADa.wikitext
+++ b/wiki/hipocres%C3%ADa.wikitext
@@ -3,4 +3,4 @@
 hi&middot;po&middot;cre&middot;sí&middot;a
 {{-noun-}}
 '''hipocresía''' ''f.''
-# [[hypocrisy]]
+:See English [[hypocrisy#English|hypocrisy]].
