--- a/wiki/Abdullah.wikitext
+++ b/wiki/Abdullah.wikitext
@@ -1,6 +1,7 @@
-== Pronunciation ==
+==English==
+=== Pronunciation ===
 
-American ([[SAMPA]]):\{'bdV"l@\
+* [[w:SAMPA|SAMPA]]: \{'bdV"l@\
 
 == Entry ==
 
