--- a/wiki/pin.wikitext
+++ b/wiki/pin.wikitext
@@ -9,7 +9,7 @@
 #:''I'm not so good on my pins these days''
 # the individual connecting elements of a [[multi-pole]] electrical connector
 #: ''The UK standard connector for domestic mains electricity is the three-pin plug''
-# an accessory that can be attached to a piece of clothing with a pin or fastener, e.g.: a [[badge]], piece of [[jewelry]], etc.
+# (A.E.) an accessory that can be attached to a piece of clothing with a pin or fastener, e.g.: a [[badge]], piece of [[jewelry]], etc.
 
 === Pronunciation===
 *[[w:SAMPA|SAMPA]]: /'/
