--- a/wiki/%E8%92%99.wikitext
+++ b/wiki/%E8%92%99.wikitext
@@ -21,17 +21,53 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': méng (meng2)
+*** '''[[Pinyin]]''': mēng (meng1), méng (meng2), mĕng (meng3)
 *** '''[[Wade-Giles]]''': meng<sup>2</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mung4
+
+===Compounds===
+#mēng
+#*[[蒙哄]]
+#*[[蒙蒙黑]]
+#*[[蒙蒙亮]]
+#*[[蒙骗]]
+#*[[蒙事]]
+#*[[蒙头转向]]
+#méng
+#*[[蒙蔽]]
+#*[[蒙尘]]
+#*[[蒙垢]]
+#*[[蒙汗药]]
+#*[[蒙哄]]
+#*[[蒙混]]
+#*[[蒙胧]]
+#*[[蒙昧]]
+#*[[蒙昧主义]]
+#*[[蒙蒙]]
+#*[[蒙难]]
+#*[[蒙求]]
+#*[[蒙受]]
+#*[[蒙太奇]]
+#*[[蒙学]]
+#*[[蒙药]]
+#*[[蒙冤]]
+#*[[蒙在鼓里]]
+#mĕng
+#*[[蒙古]]
+#*[[蒙古包]]
+#*[[蒙古大夫]]
+#*[[蒙古人种]]
+#*[[蒙古族]]
+#*[[蒙文]]
+#*[[蒙族]]
 
 * '''Other info''': 
 
