--- a/wiki/%E7%A7%98.wikitext
+++ b/wiki/%E7%A7%98.wikitext
@@ -18,13 +18,29 @@
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': mì (mi4)
-*** '''[[Wade-Giles]]''': mi<sup>4</sup>
+*** '''[[Pinyin]]''': bì (bi4), mì (mi4)
+*** '''[[Wade-Giles]]''': bi<sup>4</sup>, mi<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': bei3, bit1
+
+===Compounds===
+*[[秘鲁]]
+*[[秘宝]]
+*[[秘本]]
+*[[秘藏]]
+*[[秘而不宣]]
+*[[秘方]]
+*[[秘籍]]
+*[[秘计]]
+*[[秘诀]]
+*[[秘密]]
+*[[秘史]]
+*[[秘事]]
+*[[秘书]]
+*[[秘闻]]
 
 * '''Other info''': 
 
