--- a/wiki/%E7%A7%8D.wikitext
+++ b/wiki/%E7%A7%8D.wikitext
@@ -13,19 +13,19 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#seed
-*# race, breed
-*# to plant
+*# [[seed]]
+*# [[race]], [[breed]]
+*# to [[plant]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': chóng (chong2)
-*** '''[[Wade-Giles]]''': ch'ung<sup>2</sup>
+*** '''[[Pinyin]]''': chóng (chong2), zhǒng (zhong3), zhòng (zhong4)
+*** '''[[Wade-Giles]]''': ch'ung<sup>2</sup>, chung<sup>3</sup>, chung<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
@@ -35,11 +35,35 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[種]]
 
+===Compounds===
+#zhǒng
+#*[[种畜]]
+#*[[种类]]
+#*[[种禽]]
+#*[[种群]]
+#*[[种条]]
+#*[[种姓]]
+#*[[种鱼]]
+#*[[种种]]
+#*[[种子]]
+#*[[种子地]]
+#*[[种族]]
+#*[[种族歧视]]
+#*[[种族主义]]
+#zhòng
+#*[[种地]]
+#*[[种痘]]
+#*[[种瓜得瓜，种豆得豆]]
+#*[[种花]], [[种花儿]]
+#*[[种牛痘]]
+#*[[种田]]
+#*[[种植]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ちゅう]] (chū)
