--- a/wiki/jambe.wikitext
+++ b/wiki/jambe.wikitext
@@ -1,7 +1,11 @@
 ==French==
-
 ===Noun===
+'''jambe''' ''f''
 
+#[[leg]]
 #: ''Il marche sur ses deux jambes.'' - He walked with his two legs.
-====Translation====
-*[[English]]: [[leg]]
+
+===Related terms===
+*[[jambage]]
+*[[jambière]]
+*[[jambon]]
