--- a/wiki/jambon.wikitext
+++ b/wiki/jambon.wikitext
@@ -1,6 +1,10 @@
 ==French==
-
 ===Noun===
+'''jambon''' ''m''
 
-====Translation====
-*[[English]]: [[ham]]
+#[[ham]]
+
+===Related terms===
+*[[jambe]]
+*[[jambonneau]]
+[[ja:jambon]]
