--- a/wiki/crop.wikitext
+++ b/wiki/crop.wikitext
@@ -9,8 +9,15 @@
 # The harvest for a particular year.
 # A short haircut.
 
+====translation====
+*Hebrew: [[:he:יבול|יבול]] 
+*Russian: [[:ru:урожай|урожай]] /uroZaj/
+
 ===Verb===
 '''to crop''' ([[crops]], [[cropped]], [[cropping]])
 
 # to occur, be present. ''crop up''
 # To cut something (usually a picture)
+
+==[[multilingual associations]]==
+*[[Russian]]: '''crop''' [[:ru:укроп|укроп]]а /ukropa/ (of [[dill]])
