--- a/wiki/%E9%A1%9E.wikitext
+++ b/wiki/%E9%A1%9E.wikitext
@@ -31,9 +31,12 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[类]]
 
+===Compounds===
+*[[類別]] ([[类别]])
+*[[類書]]
+*[[類同]]
+
 * '''Other info''': 
-* '''Compounds''':
-**[[類別]] ([[类别]])
 
 ----
 
