--- a/wiki/crop.wikitext
+++ b/wiki/crop.wikitext
@@ -10,14 +10,11 @@
 # A short haircut.
 
 ====translation====
-*Hebrew: [[:he:יבול|יבול]] 
-*Russian: [[:ru:урожай|урожай]] /uroZaj/
+*Hebrew: [[יבול]][[:he:יבול|יבול]] 
+*Russian: [[урожай]][[:ru:урожай|урожай]] /uroZaj/
 
 ===Verb===
 '''to crop''' ([[crops]], [[cropped]], [[cropping]])
 
 # to occur, be present. ''crop up''
 # To cut something (usually a picture)
-
-==[[multilingual associations]]==
-*[[Russian]]: '''crop''' [[:ru:укроп|укроп]]а /ukropa/ (of [[dill]])
