--- a/wiki/crop.wikitext
+++ b/wiki/crop.wikitext
@@ -9,9 +9,9 @@
 # The harvest for a particular year.
 # A short haircut.
 
-====translation====
-*Hebrew: [[יבול]][[:he:יבול|יבול]] 
-*Russian: [[урожай]][[:ru:урожай|урожай]] /uroZaj/
+====Translations====
+*Hebrew: [[יבול]]
+*Russian: [[урожай]] /uroZaj/
 
 ===Verb===
 '''to crop''' ([[crops]], [[cropped]], [[cropping]])
