--- a/wiki/hierarchical.wikitext
+++ b/wiki/hierarchical.wikitext
@@ -1,8 +1,13 @@
-'''[hierarchical]'''
-''hi·er·ar·chi·cal''
-<hierarchal>
-<<hierarchic>>
-
-[[classified according to various criteria into successive levels or layers]] 
+==English==
+===Adjective===
+'''hierarchical'''
+#classified according to various criteria into successive levels or layers
 (e.g., It has been said that only a hierarchical society with a leisure class 
 at the top can produce works of art.)
+
+===Synonyms===
+*[[hierarchic]]
+
+===Related terms===
+*[[hierarchal]]
+*[[hierarchy]]
